apps/contextapi/overlays/production/contextapi-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contextapi
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: app.contextsuite.com
      http:
        paths:
          - backend:
              service:
                name: contextapi
                port:
                  number: 4001
            path: /stats
            pathType: Prefix
          - backend:
              service:
                name: contextapi
                port:
                  number: 4001
            path: /context
            pathType: Prefix
          - backend:
              service:
                name: contextapi
                port:
                  number: 4001
            path: /graph
            pathType: Prefix
  tls:
    - hosts:
        - app.contextsuite.com
      secretName: app-contextsuite-com-tls
